@@ -40,3 +40,14 @@ def picklers():
         for protocol in -1, 0, 1, 2:
             yield pickle.loads, lambda d:pickle.dumps(d, protocol)
     
+    
+def round_decimal(value, prec):
+    if isinstance(value, float):
+        return round(value, prec)
+    
+    import decimal
+
+    # can also use shift() here but that is 2.6 only
+    return (value * decimal.Decimal("1" + "0" * prec)).to_integral(decimal.ROUND_FLOOR) / \
+                        pow(10, prec)
+    
